Update user settings and UI components
- Modified `App.config` to change user settings defaults.
- Added progress bars in `Closing`, `DownloadingDialog`, and `DownloadingVideo` forms.
- Created `DownloadQueue` form with DataGridView for downloads.
- Enhanced `Form1` with new buttons and improved layout.
- Implemented settings management methods in `Form1.cs`.
- Restructured `Settings` form for better usability.
- Added `Dialog` class for handling dialog interactions.
- Updated project file for DPI awareness and added new resources.

--- a/YT-DLP.player/YT_DLP.player.dialogs/Dialog.resx
+++ b/YT-DLP.player/YT_DLP.player.dialogs/Dialog.resx
@@ -117,16 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="TimeTrackTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <metadata name="FullScreenControlHide.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>157, 5</value>
-  </metadata>
-  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>157, 17</value>
-  </metadata>
-  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>36</value>
-  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="dlpButtonHighlighted1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAW
+        JQAAFiUBSVIk8AAAAI9JREFUSEu1jUEKADEIA/v/T3fZw8IyiVbBBuYSE7P23usmYkwjxjQ0/uItI+xl
+        QQkHUK2BV8y08iyUSp2cGMWyE3+kA9kTJ3ZLA9Ezip3WwGmEWUGMACdmLGIYMjEriNF4/omd8oBT5lvE
+        KD5x4o9wwImZco6GEzOt/KnAu4MqD/CWEfYYHEeMacSYRoxpHgWnShnv7J3IAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
